plugins {
    id 'application'
    id 'org.javamodularity.moduleplugin' version '1.8.9'
    id 'org.openjfx.javafxplugin' version '0.0.10'
    id "org.beryx.jlink" version "2.24.1"
}

repositories {
    mavenCentral()
}

sourceCompatibility = "17"
targetCompatibility = "17"

dependencies {
    implementation 'org.apache.logging.log4j:log4j-core:2.17.2'

    implementation "org.projectlombok:lombok:1.18.20"
    // Use JUnit Jupiter for testing.
    testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.1"
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")

    implementation "com.google.guava:guava:30.0-jre"
    implementation "com.opencsv:opencsv:5.5.2"
    implementation "commons-cli:commons-cli:1.4"
    implementation "org.apache.commons:commons-exec:1.3"
    implementation 'org.apache.commons:commons-lang3:3.12.0'

    implementation 'com.vladsch.flexmark:flexmark-all:0.64.0'
    implementation 'commons-io:commons-io:2.11.0'

    compileOnly "org.projectlombok:lombok:1.18.22"
    annotationProcessor "org.projectlombok:lombok:1.18.22"
}

javafx {
    version = 16
    modules = ['javafx.controls']
}

application {
    mainClass = "radio.n2ehl.TreasurersReport"
    mainModule = "treasurers_report"
}

jlink {
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'TreasurersReport'
    }
    forceMerge('log4j-api')
    jpackage {
        if (org.gradle.internal.os.OperatingSystem.current().windows) {
            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
            imageOptions += ['--win-console']
        }
    }
}
